--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -6238,7 +6238,8 @@ body {
 .page_heading h1 {
   font-size: 48px;
   color: #fff;
-  margin: 0; }
+  margin: 0;
+  font-weight: 900; }
 
 .page_heading p {
   font-size: 20px;
@@ -6699,7 +6700,8 @@ img {
   .page_heading .page_name {
     bottom: 10px; }
   .page_heading h1 {
-    font-size: 24px; }
+    font-size: 24px;
+    font-weight: 900; }
   .page_heading p {
     font-size: 14px; }
   .col_immer .detail_sec {
@@ -6791,3 +6793,35 @@ img {
     font-size: 30px; }
   .page_heading p {
     font-size: 14px; } }
+
+.blog .panel {
+  margin-bottom: 30px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); }
+
+.blog .panel-body {
+  padding: 20px 30px; }
+
+.blog .panel:last-child {
+  margin-bottom: 0; }
+
+.blog .pagination {
+  margin: 30px 0 0 0; }
+
+.pagination > .active > a {
+  background-color: #29365C;
+  border-color: #29365C; }
+
+.blog, .blog .container {
+  position: relative; }
+
+.blog--grey-bg::after {
+  background-color: #D7D7D7;
+  content: '';
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 300px;
+  border-bottom: 1px solid #ECECEC; }
+
+.blog--grey-bg .container {
+  z-index: 10; }
