--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -90,7 +90,7 @@ position:absolute;width:100%;height:100%;left:0px;top:0; z-index:1;}
 /*--about--*/
 .page_heading{position:relative;text-align:center;}
 .page_heading img{width:100%;}
-.page_heading h1{font-size:48px;color:#fff;margin:0;}
+.page_heading h1{font-size:48px;color:#fff;margin:0; font-weight: 900;}
 .page_heading p{font-size:20px;color:#E0E0E0;}
 .page_heading .page_name{position:absolute;left:0;bottom:35px;width:100%;z-index:9;}
 .bg_inner_pages{background:linear-gradient(90deg, #0D142B 0%, rgba(14, 24, 47, 0.92) 0.01%, rgba(12, 65, 73, 0.85) 0.02%, #0C192F 0.03%, rgba(5, 179, 146, 0.8) 100%);
@@ -206,7 +206,7 @@ img{max-width:100%;}
 /*inner*/
 .page_heading{height:180px;}
 .page_heading .page_name{bottom:10px;}
-.page_heading h1{font-size:24px;}
+.page_heading h1{font-size:24px; font-weight: 900;}
 .page_heading p{font-size:14px;}
 .col_immer .detail_sec{width:100%;}
 .col_immer .detail_sec h2{font-size:24px;}
@@ -254,16 +254,45 @@ img{max-width:100%;}
 
 
 
+.blog .panel {
+    margin-bottom: 30px;
+    box-shadow: 0 2px 5px rgba(0,0,0,.1);
+}
 
+.blog .panel-body {
+    padding: 20px 30px;;
+}
 
+.blog .panel:last-child{
+    margin-bottom: 0;
+}
 
+.blog .pagination {
+    margin: 30px 0 0 0;
+}
 
+.pagination > .active > a {
+    background-color: #29365C;
+    border-color: #29365C;
+}
 
+.blog, .blog .container{
+    position: relative;
+}
 
+.blog--grey-bg::after{
+    background-color: #D7D7D7;
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 300px;
+    border-bottom: 1px solid #ECECEC;
+}
 
-
-
-
+.blog--grey-bg .container {
+    z-index: 10;
+}
 
 
 
