--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5942,7 +5942,8 @@ body {
 
 .fd_tx {
   line-height: normal;
-  font-size: 28px; }
+  font-size: 28px;
+  font-weight: 700; }
 
 .down_arrow {
   width: 56px;
@@ -6233,7 +6234,8 @@ body {
   text-align: center; }
 
 .page_heading img {
-  width: 100%; }
+  width: 100%;
+  height: 100%; }
 
 .page_heading h1 {
   font-size: 48px;
@@ -6248,7 +6250,7 @@ body {
 .page_heading .page_name {
   position: absolute;
   left: 0;
-  bottom: 35px;
+  bottom: 50px;
   width: 100%;
   z-index: 9; }
 
@@ -6825,3 +6827,7 @@ img {
 
 .blog--grey-bg .container {
   z-index: 10; }
+
+.breadcrumb {
+  text-transform: capitalize;
+  margin-bottom: 0; }
