--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -35,7 +35,7 @@ position:absolute;width:100%;height:100%;left:0px;top:0;}
 .date .fa-map-marker{font-size:36px;float:left;margin-right:15px;}
 .time{line-height:normal;font-size:18px;margin-bottom:10px;}
 .up_tx{line-height:normal;font-size:20px;margin-bottom:15px;}
-.fd_tx{line-height:normal;font-size:28px;}
+.fd_tx{line-height:normal;font-size:28px; font-weight: 700}
 .down_arrow{width:56px;height:56px;background:rgba(16, 225, 186, 0.2);position:absolute;left:0;right:0;bottom:115px;margin:0 auto;border-radius:50px;z-index:9;
 text-align:center;line-height:55px;font-size:16px;color:#BDBDBD;cursor:pointer;}
 .apply_now{display:inline-block;background:#fff;box-shadow:0px 4px 25px rgba(0, 0, 0, 0.25);border-radius:3px;padding:11px 36px 11px 36px;text-decoration:none!important;
@@ -89,10 +89,10 @@ position:absolute;width:100%;height:100%;left:0px;top:0; z-index:1;}
 .subs_form button.btn{background:#4C62A8;border: 1px solid #bdbdbd;box-sizing:border-box;border-radius:0px 3px 3px 0px;font-size:18px;color:#fff;width:32%;margin-left:-5px;height:44px;}
 /*--about--*/
 .page_heading{position:relative;text-align:center;}
-.page_heading img{width:100%;}
+.page_heading img{width:100%; height: 100%;}
 .page_heading h1{font-size:48px;color:#fff;margin:0; font-weight: 900;}
 .page_heading p{font-size:20px;color:#E0E0E0;}
-.page_heading .page_name{position:absolute;left:0;bottom:35px;width:100%;z-index:9;}
+.page_heading .page_name{position:absolute;left:0;bottom:50px;width:100%;z-index:9;}
 .bg_inner_pages{background:linear-gradient(90deg, #0D142B 0%, rgba(14, 24, 47, 0.92) 0.01%, rgba(12, 65, 73, 0.85) 0.02%, #0C192F 0.03%, rgba(5, 179, 146, 0.8) 100%);
 box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);position:absolute;left:0;top:0;width:100%;height:100%;}
 .aboutus p{text-align:left;}
@@ -294,6 +294,10 @@ img{max-width:100%;}
     z-index: 10;
 }
 
+.breadcrumb{
+    text-transform: capitalize;
+    margin-bottom: 0;
+}
 
 
 
